bug 478175 - multipart/related creates duplicate child at unexpected position, resulting in confusion for multipart/alternative children. r/sr=bienvenu.